log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 06:26:34 PM UTC: 
 tests:  0|6
total_score: 0/70
9f41f28
Tue 28 Mar 2023 06:47:09 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
357dcd0
Tue 28 Mar 2023 06:52:49 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
a07722c
Tue 28 Mar 2023 07:02:00 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b87b909
Fri 31 Mar 2023 08:53:21 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b45b383
Fri 31 Mar 2023 08:57:52 PM UTC: 
 arraylist.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:26:33: error: expected ‘;’ before ‘l’
   26 |     l->capacity= (l->capacity)*2
      |                                 ^
      |                                 ;
   27 |     l->data =(void*) realloc(l->data, sizeof(void*)*l->capacity);
      |     ~                            
Compilation failed
01cd0a0
